--- a/.gitignore
+++ b/.gitignore
@@ -148,7 +148,7 @@ sympy-plots-for-*.tex/
 # pdfcomment
 *.upa
 *.upb
-prj4projektdokumentation.pdf
+Projekt Dokumentation/prj4projektdokumentation.pdf
 
 # pythontex
 *.pytxcode
