--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,8 @@
 *.cb2
 
 /ProjektDokumentation/prj4projektdokumentation.pdf
+/ProcesDokumentation/prj4procesdokumentation.pdf
+/ProjektRapport/prj4projektrapport.pdf
 
 ## Intermediate documents:
 *.dvi
