tilføjet psoc creator files til gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -200,3 +200,16 @@ TSWLatexianTemp*
 
 # auto folder when using emacs and auctex 
 /auto/*
+
+## PSOC creator.
+.DS_Store
+*.cywrk.*
+*.cyprj.*
+*.cycdx
+*.cyfit
+*.rpt
+*.uvopt
+*.uvproj
+*_timing.html
+*.cydsn/codegentemp
+*.cydsn/CortexM3
